--- a/WeatherInfo/Module/Location/Location.csproj
+++ b/WeatherInfo/Module/Location/Location.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=4.1.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\AutoMapper.4.1.1\lib\net45\AutoMapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -42,6 +46,7 @@
   <ItemGroup>
     <Compile Include="Address\Address.cs" />
     <Compile Include="Location.cs" />
+    <Compile Include="Map\MapProfile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Weather\IWeatherService.cs" />
     <Compile Include="Weather\UnitType.cs" />
@@ -49,6 +54,9 @@
     <Compile Include="Weather\WeatherDataModel.cs" />
     <Compile Include="Weather\WeatherInfoModel.cs" />
     <Compile Include="Weather\WeatherService.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
