added integration tests for weather service

--- a/WeatherInfo/Test/LocationTests/LocationTests.csproj
+++ b/WeatherInfo/Test/LocationTests/LocationTests.csproj
@@ -69,12 +69,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Integration\WeatherServiceTests.cs" />
     <Compile Include="Unit\WeatherTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Integration\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
