added base test classes then refactored setup logic into the base classes as appropriate

--- a/WeatherInfo/Test/LocationTests/LocationTests.csproj
+++ b/WeatherInfo/Test/LocationTests/LocationTests.csproj
@@ -70,6 +70,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseIntegrationTest.cs" />
+    <Compile Include="BaseTest.cs" />
     <Compile Include="Integration\WeatherServiceTests.cs" />
     <Compile Include="Unit\WeatherTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
