--- a/WeatherInfo/Module/Location/Location.csproj
+++ b/WeatherInfo/Module/Location/Location.csproj
@@ -54,12 +54,13 @@
     <Compile Include="Map\MapProfile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Weather\api\weather.cs" />
+    <Compile Include="Weather\api\ForecastWeatherDataModel.cs" />
     <Compile Include="Weather\IWeatherService.cs" />
     <Compile Include="Weather\UnitType.cs" />
     <Compile Include="Weather\Weather.cs" />
     <Compile Include="Weather\api\CurrentWeatherDataModel.cs" />
     <Compile Include="Weather\WeatherInfoModel.cs" />
-    <Compile Include="Weather\WeatherService.cs" />
+    <Compile Include="Weather\OpenWeatherMapWeatherService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
