--- a/WeatherInfo/Module/Location/Location.csproj
+++ b/WeatherInfo/Module/Location/Location.csproj
@@ -53,12 +53,12 @@
     <Compile Include="Location.cs" />
     <Compile Include="Map\MapProfile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Weather\api\weather.cs" />
-    <Compile Include="Weather\api\ForecastWeatherDataModel.cs" />
+    <Compile Include="Weather\api\OpenWeatherMap\weather.cs" />
+    <Compile Include="Weather\api\OpenWeatherMap\ForecastWeatherDataModel.cs" />
     <Compile Include="Weather\IWeatherService.cs" />
     <Compile Include="Weather\UnitType.cs" />
     <Compile Include="Weather\Weather.cs" />
-    <Compile Include="Weather\api\CurrentWeatherDataModel.cs" />
+    <Compile Include="Weather\api\OpenWeatherMap\CurrentWeatherDataModel.cs" />
     <Compile Include="Weather\WeatherInfoModel.cs" />
     <Compile Include="Weather\OpenWeatherMapWeatherService.cs" />
   </ItemGroup>
