replaced GeoLocator.getCurrentLocation method and friends with GeoLocatorService for some reason, the data returned to the controller needs to be an array, or otherwise the pointers get messed up apparently

--- a/WeatherInfo/Web/WeatherInfo.Web/WeatherInfo.Web.csproj
+++ b/WeatherInfo/Web/WeatherInfo.Web/WeatherInfo.Web.csproj
@@ -151,6 +151,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="js\main\GeoLocationService.js" />
     <Content Include="js\main\LocationService.js" />
     <Content Include="js\main\WeatherController.js" />
     <Content Include="Scripts\angular-mocks.js" />
