--- a/WeatherInfo/Web/WeatherInfo.Web/packages.config
+++ b/WeatherInfo/Web/WeatherInfo.Web/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="AngularJS.Core" version="1.4.8" targetFramework="net46" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net46" />
+  <package id="AutoMapper" version="4.1.1" targetFramework="net46" />
   <package id="bootstrap" version="3.0.1" targetFramework="net46" />
   <package id="jQuery" version="1.10.2" targetFramework="net46" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net46" />
