--- a/WeatherInfo/Web/WeatherInfo.Web/WeatherInfo.Web.csproj
+++ b/WeatherInfo/Web/WeatherInfo.Web/WeatherInfo.Web.csproj
@@ -130,6 +130,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApiControllers\BaseApiController.cs" />
     <Compile Include="ApiControllers\WeatherController.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
@@ -139,8 +140,6 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\Weather\MainItemViewModel.cs" />
-    <Compile Include="Models\Weather\MainViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -203,6 +202,10 @@
     <ProjectReference Include="..\..\Module\Location\Location.csproj">
       <Project>{0569be38-b68e-4c67-b4db-7d43c163d2ab}</Project>
       <Name>Location</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\WeatherInfo.Application\WeatherInfo.Application.csproj">
+      <Project>{9c08e34b-2ec8-4ab4-ae2f-766697e8baf0}</Project>
+      <Name>WeatherInfo.Application</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
