--- a/WeatherInfo/Module/Infrastructure/Infrastructure.csproj
+++ b/WeatherInfo/Module/Infrastructure/Infrastructure.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0569BE38-B68E-4C67-B4DB-7D43C163D2AB}</ProjectGuid>
+    <ProjectGuid>{F3838A2D-E8F3-49A9-B434-A78AA60D921B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Location</RootNamespace>
-    <AssemblyName>Location</AssemblyName>
+    <RootNamespace>Infrastructure</RootNamespace>
+    <AssemblyName>Infrastructure</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,16 +30,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AutoMapper, Version=4.1.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\AutoMapper.4.1.1\lib\net45\AutoMapper.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -49,31 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Address\Address.cs" />
-    <Compile Include="Location.cs" />
-    <Compile Include="Map\MapProfile.cs" />
+    <Compile Include="Core\Settings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Weather\api\OpenWeatherMap\weather.cs" />
-    <Compile Include="Weather\api\OpenWeatherMap\ForecastWeatherDataModel.cs" />
-    <Compile Include="Weather\api\WorldWeatherOnline\data.cs" />
-    <Compile Include="Weather\api\WorldWeatherOnline\HistoricalWeatherDataModel.cs" />
-    <Compile Include="Weather\api\WorldWeatherOnline\weather.cs" />
-    <Compile Include="Weather\api\WorldWeatherOnline\WorldWeatherOnlineWeatherService.cs" />
-    <Compile Include="Weather\IWeatherService.cs" />
-    <Compile Include="Weather\UnitType.cs" />
-    <Compile Include="Weather\Weather.cs" />
-    <Compile Include="Weather\api\OpenWeatherMap\CurrentWeatherDataModel.cs" />
-    <Compile Include="Weather\WeatherInfoModel.cs" />
-    <Compile Include="Weather\api\OpenWeatherMap\OpenWeatherMapWeatherService.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj">
-      <Project>{f3838a2d-e8f3-49a9-b434-a78aa60d921b}</Project>
-      <Name>Infrastructure</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
