--- a/WeatherInfo/Web/WeatherInfo.Web/packages.config
+++ b/WeatherInfo/Web/WeatherInfo.Web/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Angular.UI.Bootstrap" version="1.1.2" targetFramework="net46" />
   <package id="AngularJS.Core" version="1.4.8" targetFramework="net46" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net46" />
   <package id="AutoMapper" version="4.1.1" targetFramework="net46" />
