skeleton code to add validation still needs validation database logic

--- a/WeatherInfo/Web/WeatherInfo.Web/WeatherInfo.Web.csproj
+++ b/WeatherInfo/Web/WeatherInfo.Web/WeatherInfo.Web.csproj
@@ -131,6 +131,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiControllers\BaseApiController.cs" />
+    <Compile Include="ApiControllers\LocationController.cs" />
     <Compile Include="ApiControllers\WeatherController.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
