--- a/WeatherInfo/Web/WeatherInfo.Application/WeatherInfo.Application.csproj
+++ b/WeatherInfo/Web/WeatherInfo.Application/WeatherInfo.Application.csproj
@@ -40,10 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Location\LocationViewModel.cs" />
     <Compile Include="Models\Weather\MainItemViewModel.cs" />
     <Compile Include="Models\Weather\MainViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\BaseService.cs" />
+    <Compile Include="Services\LocationService.cs" />
     <Compile Include="Services\SettingsService.cs" />
     <Compile Include="Services\WeatherService.cs" />
   </ItemGroup>
