SQL updated PK on user locations and made User ID a non-unique indexed field added Dapper + Microsoft.SqlServerTypes added location repository added logic to add location + models NOTE: just using "default user" until we add logins added database configuration for both local and AppHarbor

--- a/WeatherInfo/Module/Location/Location.csproj
+++ b/WeatherInfo/Module/Location/Location.csproj
@@ -70,6 +70,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Data\Data.csproj">
+      <Project>{2026c138-a91c-4eff-8e94-2fd8cb5ab0fa}</Project>
+      <Name>Data</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj">
       <Project>{f3838a2d-e8f3-49a9-b434-a78aa60d921b}</Project>
       <Name>Infrastructure</Name>
