--- a/WeatherInfo/Web/WeatherInfo.Application/WeatherInfo.Application.csproj
+++ b/WeatherInfo/Web/WeatherInfo.Application/WeatherInfo.Application.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Models\Location\LocationViewModel.cs" />
     <Compile Include="Models\Weather\MainItemViewModel.cs" />
     <Compile Include="Models\Weather\MainViewModel.cs" />
+    <Compile Include="Models\Weather\WeatherModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\BaseService.cs" />
     <Compile Include="Services\LocationService.cs" />
