--- a/WeatherInfo/Web/WeatherInfo.Web/Views/Web.config
+++ b/WeatherInfo/Web/WeatherInfo.Web/Views/Web.config
@@ -40,4 +40,14 @@
       </assemblies>
     </compilation>
   </system.web>
+
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.SqlServer.Types" publicKeyToken="89845dcd8080cc91" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
+
 </configuration>
