added scrolltest.html to project so I can access it via app harbor

--- a/WeatherInfo/Web/WeatherInfo.Web/WeatherInfo.Web.csproj
+++ b/WeatherInfo/Web/WeatherInfo.Web/WeatherInfo.Web.csproj
@@ -187,6 +187,7 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
+    <Content Include="scrolltest.html" />
     <Content Include="Templates\Location\Add.html" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
