--- a/WeatherInfo/Module/Common/Common.csproj
+++ b/WeatherInfo/Module/Common/Common.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9C08E34B-2EC8-4AB4-AE2F-766697E8BAF0}</ProjectGuid>
+    <ProjectGuid>{B512F684-C389-473A-805F-123415D6D203}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WeatherInfo.Application</RootNamespace>
-    <AssemblyName>WeatherInfo.Application</AssemblyName>
+    <RootNamespace>Common</RootNamespace>
+    <AssemblyName>Common</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,10 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AutoMapper, Version=4.1.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\AutoMapper.4.1.1\lib\net45\AutoMapper.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,33 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Map\MapProfile.cs" />
-    <Compile Include="Models\Location\LocationViewModel.cs" />
-    <Compile Include="Models\Weather\MainItemViewModel.cs" />
-    <Compile Include="Models\Weather\MainViewModel.cs" />
-    <Compile Include="Models\Weather\WeatherModel.cs" />
+    <Compile Include="DateTimeHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\BaseService.cs" />
-    <Compile Include="Services\LocationService.cs" />
-    <Compile Include="Services\SettingsService.cs" />
-    <Compile Include="Services\WeatherService.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Module\Common\Common.csproj">
-      <Project>{b512f684-c389-473a-805f-123415d6d203}</Project>
-      <Name>Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Module\Infrastructure\Infrastructure.csproj">
-      <Project>{f3838a2d-e8f3-49a9-b434-a78aa60d921b}</Project>
-      <Name>Infrastructure</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Module\Location\Location.csproj">
-      <Project>{0569be38-b68e-4c67-b4db-7d43c163d2ab}</Project>
-      <Name>Location</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
