Ran create-react-app
got entries generated for .gitignore and copy / pasted them to main
.gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -233,3 +233,16 @@ _Pvt_Extensions
 # environment specific
 env/
 
+# from create-react-app
+
+# testing
+coverage
+
+# production
+build
+
+# misc
+.DS_Store
+.env
+npm-debug.log
+
