--- a/WeatherInfo/Web/WeatherInfo.Web/Web.Release.config
+++ b/WeatherInfo/Web/WeatherInfo.Web/Web.Release.config
@@ -28,4 +28,11 @@
       </customErrors>
     -->
   </system.web>
+  <system.webServer>
+    <httpProtocol>
+      <customHeaders>
+        <add xdt:Transform="RemoveAll" />
+      </customHeaders>
+    </httpProtocol>
+  </system.webServer>
 </configuration>
